firehose_rds_api_gateway/cloudformation/infringement_store.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: >-
    Create a VPC with two private subnets in different AvailabilityZoness and a
    PostgreSQL RDS. Create a bastion host in a public subnet to access private RDS
    instance through SSH tunelling
Parameters:
    # VPC
    VpcCidrBlock:
        Description: VPC CIDR block
        Type: String
        AllowedPattern: "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/\\d{1,2}"
        Default: 10.1.0.0/16
    # Public and private Subnets
    PublicSubnetACidrBlock:
        Description: Public subnet CIDR block
        Type: String
        AllowedPattern: "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/\\d{1,2}"
        Default: 10.1.10.0/24
    PrivateSubnetACidrBlock:
        Description: Private subnet CIDR block
        Type: String
        AllowedPattern: "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/\\d{1,2}"
        Default: 10.1.20.0/24
    PrivateSubnetBCidrBlock:
        Description: Private subnet 2 CIDR block
        Type: String
        AllowedPattern: "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/\\d{1,2}"
        Default: 10.1.30.0/24
    # Bastion EC2
    BastionImageId:
        Description: Bastion EC2 image ID
        Type: AWS::EC2::Image::Id
        Default: ami-0cc293023f983ed53
    BastionInstanceType:
        Description: Bastion EC2 instance type
        Type: String
        Default: t2.nano
    BastionKeyName:
        Description: SSH key name to access Bastion EC2
        Type: String
        Default: vprokopy
    # RDS
    RdsInstanceClass:
        Description: RDS instance class
        Type: String
        Default: db.t2.micro
    RdsMaxAllocatedStorage:
        Description: RDS maximal allocated storage
        Type: String
        Default: 5
    DbEngine:
        Description: Database engine
        Type: String
        Default: postgres
    DbEngineVersion:
        Description: Database engine version
        Type: String
        Default: 11.2
    DbPort:
        Description: Database port
        Type: Number
        Default: 5432
    DbName:
        Description: Database name
        Type: String
    DbUser:
        Description: Database usper user
        Type: String
    DbPassword:
        Description: Database super user password
        Type: String
        NoEcho: true
Resources:
    # VPC
    Vpc:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCidrBlock
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-Vpc
    # InternetGateway
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-InternetGateway
    GatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref Vpc
            InternetGatewayId: !Ref InternetGateway
    # NatGateway
    NatGatewayElasticIpAddress:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGatewayElasticIpAddress.AllocationId
            SubnetId: !Ref PublicSubnetA
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-NatGateway
    # Public Subnet A
    PublicSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref Vpc
            CidrBlock: !Ref PublicSubnetACidrBlock
            AvailabilityZone: !Select [0, !GetAZs ]
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PublicSubnetA
    # Public Subnet A RouteTable
    PublicSubnetARouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref Vpc
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PublicSubnetARouteTable
    PublicSubnetADefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicSubnetARouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnetARouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicSubnetARouteTable
            SubnetId: !Ref PublicSubnetA
    # Private Subnet A
    PrivateSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref Vpc
            CidrBlock: !Ref PrivateSubnetACidrBlock
            AvailabilityZone: !Select [0, !GetAZs ]
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PrivateSubnetA
    # Private Subnet A RouteTable
    PrivateSubnetARouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref Vpc
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PrivateSubnetARouteTable
    PrivateSubnetADefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateSubnetARouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway
    PrivateSubnetARouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateSubnetARouteTable
            SubnetId: !Ref PrivateSubnetA
    # Private Subnet B
    PrivateSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref Vpc
            CidrBlock: !Ref PrivateSubnetBCidrBlock
            AvailabilityZone: !Select [1, !GetAZs ]
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PrivateSubnetB
    # Private Subnet B RouteTable
    PrivateSubnetBRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref Vpc
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-PrivateSubnetBRouteTable
    PrivateSubnetBDefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateSubnetBRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway
    PrivateSubnetBRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateSubnetBRouteTable
            SubnetId: !Ref PrivateSubnetB
    # Bastion SecurityGroup
    BastionSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: !Sub ${AWS::StackName}-BastionSecurityGroup
            GroupDescription: Bastion SecurityGroup
            VpcId: !Ref Vpc
    BastionDefaultOutboundRule:
        Type: AWS::EC2::SecurityGroupEgress
        Properties:
            GroupId: !Ref BastionSecurityGroup
            IpProtocol: "-1"
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0
    BastionInboundRule:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            GroupId: !Ref BastionSecurityGroup
            IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
    # Bastion EC2
    BastionEc2:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: !Ref BastionImageId
            InstanceType: !Ref BastionInstanceType
            KeyName: !Ref BastionKeyName
            SecurityGroupIds:
                - !GetAtt BastionSecurityGroup.GroupId
            SubnetId: !Ref PublicSubnetA
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-BastionEc2
    # Lambda SecurityGroup
    LambdaSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: !Sub ${AWS::StackName}-LambdaSecurityGroup
            GroupDescription: Transform Lambda SecurityGroup
            VpcId: !Ref Vpc
    LambdaDefaultOutboundRule:
        Type: AWS::EC2::SecurityGroupEgress
        Properties:
            GroupId: !Ref LambdaSecurityGroup
            IpProtocol: "-1"
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0
    # RDS SecurityGroup
    RdsSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: !Sub ${AWS::StackName}-RdsSecurityGroup
            GroupDescription: RDS SecurityGroup
            VpcId: !Ref Vpc
    RdsDefaultOutboundRule:
        Type: AWS::EC2::SecurityGroupEgress
        Properties:
            GroupId: !Ref RdsSecurityGroup
            IpProtocol: "-1"
            FromPort: 0
            ToPort: 65535
            CidrIp: 0.0.0.0/0
    RdsBastionInboundRule:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            GroupId: !Ref RdsSecurityGroup
            IpProtocol: tcp
            FromPort: !Ref DbPort
            ToPort: !Ref DbPort
            SourceSecurityGroupId: !Ref BastionSecurityGroup
    RdsLambdaInboundRule:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            GroupId: !Ref RdsSecurityGroup
            IpProtocol: tcp
            FromPort: !Ref DbPort
            ToPort: !Ref DbPort
            SourceSecurityGroupId: !Ref LambdaSecurityGroup
    # PostgreSQL RDS
    DbSubnetGroup:
        Type: AWS::RDS::DBSubnetGroup
        Properties:
            DBSubnetGroupName: !Sub ${AWS::StackName}-DbSubnetGroup
            DBSubnetGroupDescription: DB subnet group
            SubnetIds:
                - !Ref PrivateSubnetA
                - !Ref PrivateSubnetB
    DbInstance:
        Type: AWS::RDS::DBInstance
        DeletionPolicy: Delete # Snapshot
        Properties:
            DBInstanceClass: !Ref RdsInstanceClass
            AllocatedStorage: !Ref RdsMaxAllocatedStorage
            Engine: !Ref DbEngine
            EngineVersion: !Ref DbEngineVersion
            AllowMajorVersionUpgrade: false
            AutoMinorVersionUpgrade: false
            Port: !Ref DbPort
            DBName: !Ref DbName
            MasterUsername: !Ref DbUser
            MasterUserPassword: !Ref DbPassword
            PubliclyAccessible: true
            DBSubnetGroupName: !Ref DbSubnetGroup
            VPCSecurityGroups:
                - !Ref RdsSecurityGroup
            Tags:
                - Key: Name
                  Value: !Sub ${AWS::StackName}-Rds
Outputs:
    # VPC
    VpcId:
        Description: VPC ID
        Value: !Ref Vpc
    VpcCidrBlock:
        Description: VPC CIDR block
        Value: !GetAtt Vpc.CidrBlock
    # Public Subnet
    PublicSubnetAId:
        Description: Public Subnet A ID
        Value: !Ref PublicSubnetA
    # Private Subnet A
    PrivateSubnetAId:
        Description: Private Subnet ID
        Value: !Ref PrivateSubnetA
        Export:
            Name: !Sub ${AWS::StackName}:PrivateSubnetAId
    # PrivateSubnet B
    PrivateSubnetBId:
        Description: Private Subnet B ID
        Value: !Ref PrivateSubnetB
        Export:
            Name: !Sub ${AWS::StackName}:PrivateSubnetBId
    # Bastion EC2
    BastionEc2InstanceId:
        Description: Bastion EC2 instance ID
        Value: !Ref BastionEc2
    BastionEc2PublicDnsName:
        Description: Bastion EC2 bastion public DNS name
        Value: !GetAtt BastionEc2.PublicDnsName
    BastionEc2PublicIp:
        Description: Bastion EC2 public IP
        Value: !GetAtt BastionEc2.PublicIp
        Export:
            Name: !Sub ${AWS::StackName}:BastionEc2PublicIp
    BastionEc2PrivateDnsName:
        Description: Bastion EC2 private DNS name
        Value: !GetAtt BastionEc2.PrivateDnsName
    BastionEc2PrivateIp:
        Description: Bastion EC2 private IP
        Value: !GetAtt BastionEc2.PrivateIp
    # Lambda SecurityGroup
    LambdaSecurityGroupId:
        Description: Lambda SecurityGroup ID
        Value: !GetAtt LambdaSecurityGroup.GroupId
        Export:
            Name: !Sub ${AWS::StackName}:LambdaSecurityGroupId
    # PostgreSQL RDS
    DbInstanceEndpointAddress:
        Description: Database instance endpoint address
        Value: !GetAtt DbInstance.Endpoint.Address
        Export:
            Name: !Sub ${AWS::StackName}:RdsEndpointAddress
    DbInstanceEndpointPort:
        Description: Database instance endpoint port
        Value: !GetAtt DbInstance.Endpoint.Port
        Export:
            Name:  !Sub ${AWS::StackName}:RdsEndpointPort
